# songsara-backend

./: .gitignore  README.md  pyproject.toml  pytest.ini
album/: admin.py  api.py  models.py  serializers.py  urls.py
album/migrations/: 0001_initial.py  0002_alter_album_moods.py  0003_album_genre.py  0003_alter_album_moods.py  0004_alter_album_moods.py
album/tests/: __init__.py  conftest.py  test_album.py
artist/: api.py  models.py  serializers.py  urls.py
artist/migrations/: 0001_initial.py  0002_alter_artist_name_alter_artist_slug.py
artist/tests/: conftest.py  test_artist.py
authentication/: serializers.py  urls.py  views.py
authentication/tasks/: __init__.py  task_auth.py
authentication/tests/: conftest.py  test_authentication.py
core/: __init__.py  celery.py  settings.py  urls.py
genre/: api.py  models.py  serializers.py  urls.py
genre/migrations/: 0001_initial.py  0002_alter_genre_name_alter_genre_slug.py  0003_alter_genre_text.py
genre/tests/: conftest.py  test_genre.py
mood/: __init__.py  admin.py  api.py  models.py  serializers.py  urls.py
mood/migrations/: 0001_initial.py
mood/tests/: __init__.py  conftest.py  test_mood.py
playlist/: admin.py  api.py  models.py  serializers.py  urls.py
playlist/migrations/: 0001_initial.py  0002_alter_playlist_slug.py
playlist/tests/: __init__.py  test_models.py  test_routes.py
templates/: send_email.html
track/: admin.py  api.py  models.py  serializers.py  urls.py
user/: admin.py  api.py  manager.py  models.py  serializers.py  urls.py
utils/: pagination.py  permissions.py  tests.py
(+6 files in other folders)
